objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ALERT__c</fullName>
        <defaultValue>&quot;ARE YOU SURE YOU WANT TO CANCEL THIS CONTRACT AND STOP BILLING?&quot;</defaultValue>
        <label>ALERT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Notes__c</fullName>
        <inlineHelpText>used by the Order QA to insert notes into a contract</inlineHelpText>
        <label>Accounting Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Pricing_Tool_Count__c</fullName>
        <label>Active Pricing Tool Count</label>
        <summaryFilterItems>
            <field>Billing_Item__c.Asset_Product_Name__c</field>
            <operation>equals</operation>
            <value>Pricing Tool</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Alternate_Contract_Id__c</fullName>
        <inlineHelpText>contract id from external systems: AccPac, VinManager</inlineHelpText>
        <label>Alternate Contract Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <defaultValue>&quot;VinSolutions&quot;</defaultValue>
        <label>BU</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>look up account that billing will go to</inlineHelpText>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_SVOC_ID__c</fullName>
        <formula>Bill_To_Account__r.SVOC_Id__c</formula>
        <inlineHelpText>formula field that reads the SVOC id associated with the account in the &quot;Bill to SVOC Account&quot; field</inlineHelpText>
        <label>Bill To SVOC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Asset_Count__c</fullName>
        <label>Billed Asset Count</label>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billed_Assets_Pending_Activation__c</fullName>
        <inlineHelpText>formula field that rolls up the count of the billed asset pending activation in RMB</inlineHelpText>
        <label>Billed Assets Pending Activation</label>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ADD</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BillingAddress2__c</fullName>
        <formula>Bill_To_Account__r.BillingStreet  + &apos; &apos; + Bill_To_Account__r.BillingCity + &apos;, &apos; +  Bill_To_Account__r.BillingState + &apos; &apos; + Bill_To_Account__r.BillingPostalCode + &apos; &apos; + Bill_To_Account__r.BillingCountry</formula>
        <label>BillingAddress2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <formula>Related_Opportunity__r.Billing_Contact_Email_Address__c 
/*Billing_Contact__r.Email*/</formula>
        <inlineHelpText>formula field that reads the email address from the billing contact lookup field</inlineHelpText>
        <label>Billing Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the existing contact that will be used as the billing contact for the customer</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Fax__c</fullName>
        <description>add during vAuto Software Consolidation</description>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>What BU this Contract is associated with.</description>
        <formula>IF( 
   ISPICKVAL(Contract_Type__c, &quot;vAuto&quot;), 
   &quot;vAuto&quot;,
   IF(
      !ISBLANK(Related_Opportunity__c),
      Related_Opportunity__r.Business_Unit__c,
      IF(
         ISPICKVAL(CreatedBy.Business_Unit__c, &quot;VIN&quot;) ||
         (
            CONTAINS(CreatedBy.Username, &quot;maggie.jolitz@vinsolutions.com&quot;) &amp;&amp;
            DATEVALUE(CreatedDate) &lt; DATE(2014,1,1)
         ),
         &quot;VinSolutions&quot;,
         IF(
            ISPICKVAL(CreatedBy.Business_Unit__c, &quot;HAY&quot;),
            &quot;Haystak&quot;,
            &quot;NOT DEFINED - SEE ADMIN&quot;
         )
      )
   )
)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <formula>TEXT(Cancellation_Reason__c)</formula>
        <label>Cancel Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>field label changed from Cancellation Reason to Churn Reason - 10/30 for vauto migration</description>
        <label>Churn Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Brand compliancy/OEM Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutting Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Closed/Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Receive Functionality That Was Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Communication/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial/Reduction of Service(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Performance Related Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went w/Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Churned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V2V Buy/Sell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Rescinded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>update this box to issue a task to have a reactivate opp created when a cancellation is rescinded after the cancellation has been processed</inlineHelpText>
        <label>Cancellation Rescinded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancelled_MRR__c</fullName>
        <inlineHelpText>totals the mrr lost of cancellations due to churn or cancelled sales</inlineHelpText>
        <label>Cancelled MRR</label>
        <summarizedField>Billing_Item__c.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.End_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Recurring_Flag__c</field>
            <operation>equals</operation>
            <value>BP</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Bill_Period_Code__c</field>
            <operation>equals</operation>
            <value>FUTUREM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Action__c</field>
            <operation>equals</operation>
            <value>Cancelled, No Launch</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conquest_Deposit__c</fullName>
        <inlineHelpText>vAuto</inlineHelpText>
        <label>Conquest Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Safe_ID__c</fullName>
        <description>18 character Salesforce ID</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>18 Character SFDC ID</inlineHelpText>
        <label>Contract Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Total_Converted__c</fullName>
        <formula>Contract_Total__c * Currency_Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount of this contract converted to USD.</inlineHelpText>
        <label>Contract Total (Converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Total__c</fullName>
        <label>Contract Total</label>
        <summarizedField>Billing_Item__c.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.Alternate_Product_Description__c</field>
            <operation>notContain</operation>
            <value>Advance Payment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>CANCELLED</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Revenue_Type__c</field>
            <operation>notEqual</operation>
            <value>One Time Credit, Setup Credit, Recurring Credit</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Line of Business - Use this to determine Contract Type (1 per LOB)</description>
        <inlineHelpText>LOB</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>AutoProcess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Know Me Overages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Trader Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency_Conversion_Rate__c</fullName>
        <inlineHelpText>Copied from the opportunity when the contract is created (via workflow). Updated by Flow monthly on active contracts.</inlineHelpText>
        <label>Currency Conversion Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <inlineHelpText>formula field that reads the phone # from the account</inlineHelpText>
        <label>Customer Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Activated_in_RMB__c</fullName>
        <inlineHelpText>date the contract was activated in RMB</inlineHelpText>
        <label>Date Activated in RMB</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Approved_by_Controller__c</fullName>
        <label>Date Approved by Controller</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Payment_Matched__c</fullName>
        <label>Date Payment Matched</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_SVOC_ID__c</fullName>
        <formula>Account.SVOC_Id__c</formula>
        <inlineHelpText>formula field that reads the SVOC Id associated with the Dealer Account</inlineHelpText>
        <label>Dealer SVOC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by code when a Billing Item on this contract is deleted. Used by Flow Triggers.</description>
        <label>Deleted Billing Item Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Value__c</fullName>
        <formula>TEXT(Department__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5100</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dollar_Difference__c</fullName>
        <formula>IF( Business_Unit__c = &quot;VinSolutions&quot;, Opportunity_Amount__c - Contract_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dollar Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Draft_Age__c</fullName>
        <formula>IF(  Bill_To_SVOC_ID__c  = NULL, Today()-  DATEVALUE(CreatedDate)  , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Draft Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eula_Information__c</fullName>
        <inlineHelpText>information is copy and pasted from the ticket that is created</inlineHelpText>
        <label>Eula Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fees_Pending_Add__c</fullName>
        <label>Fees Pending Add</label>
        <summaryFilterItems>
            <field>Billing_Item__c.Revenue_Type__c</field>
            <operation>equals</operation>
            <value>Setup</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ADD</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Total_Price__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Floor_Price__c</fullName>
        <inlineHelpText>AT RMB field - Minimum price to be applied for this contract</inlineHelpText>
        <label>Floor Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generate_Account_By__c</fullName>
        <inlineHelpText>BU-all contracts with this will bill under 1 RMB account. LOB=create a new RMB Account and all contracts with LOB will bill as one invoice.  Contract = create a new RMB account and 1 bill per contract</inlineHelpText>
        <label>Generate Account By</label>
        <picklist>
            <picklistValues>
                <fullName>BU</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>LOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTRACT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_CRM__c</fullName>
        <inlineHelpText>counts the active recurring billed assets that start with CRM or Platinum</inlineHelpText>
        <label>Has CRM?</label>
        <summaryFilterItems>
            <field>Billing_Item__c.Asset_Product_Name__c</field>
            <operation>startsWith</operation>
            <value>CRM, Platinum</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MODIFY</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Asset_Product_Name__c</field>
            <operation>notContain</operation>
            <value>Additional User</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Camera__c</fullName>
        <description>VinSolutions Field</description>
        <inlineHelpText>rollups the Qty of camera&apos;s on the contract</inlineHelpText>
        <label>Has Camera?</label>
        <summarizedField>Billing_Item__c.Qty__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.Asset_Product_Name__c</field>
            <operation>equals</operation>
            <value>VinCamera &amp; Software</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_DLS__c</fullName>
        <description>VinSolutions field for reporting</description>
        <inlineHelpText>has Driver&apos;s License Scanner</inlineHelpText>
        <label>Has DLS?</label>
        <summarizedField>Billing_Item__c.Qty__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Item__c.Asset_Product_Name__c</field>
            <operation>startsWith</operation>
            <value>Drivers License</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Data_Integration__c</fullName>
        <description>admin field used to sync contracts to rmb if the criteria is met</description>
        <label>Has Data Integration?</label>
        <summaryFilterItems>
            <field>Billing_Item__c.Alternate_Product_Description__c</field>
            <operation>equals</operation>
            <value>Integration Surcharge</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ADD</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_ILM__c</fullName>
        <description>VinSolutions</description>
        <label>Has ILM?</label>
        <summaryFilterItems>
            <field>Billing_Item__c.Asset_Product_Name__c</field>
            <operation>startsWith</operation>
            <value>ILM</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MODIFY</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Inventory__c</fullName>
        <inlineHelpText>rollup field that counts the active billed assets that are product name = Inventory module</inlineHelpText>
        <label>Has Inventory?</label>
        <summaryFilterItems>
            <field>Billing_Item__c.Asset_Product_Name__c</field>
            <operation>startsWith</operation>
            <value>Inventory Module, Inventory Light</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ADD, MODIFY, Process Stop</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Website__c</fullName>
        <label>Has Website?</label>
        <summaryFilterItems>
            <field>Billing_Item__c.Product_Family_Workflow__c</field>
            <operation>equals</operation>
            <value>Monthly Reoccuring</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Asset_Product_Name__c</field>
            <operation>startsWith</operation>
            <value>Website</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>I_Understand_this_will_stop_all_billing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>by clicking this box you are agreeing that you want to cancel this contract and stop all billing to the customer</inlineHelpText>
        <label>I Understand this will STOP all Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <formula>Record_status__c &amp; &quot; &quot; &amp; Warning__c &amp; &quot; &quot; &amp;  Integration_Flair__c &amp; &quot; &quot;&amp;  SVOC_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Flair__c</fullName>
        <formula>IF( ISPICKVAL(  Integration_Status__c , &quot;Success&quot;) , IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001VUsi&amp;oid=00D700000008zHZ&amp;lastMod=1372103714000&quot;, &quot;Success&quot;), 
IF( ISPICKVAL( Integration_Status__c, &quot;Error&quot;) , IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001VRsA&amp;oid=00D700000008zHZ&amp;lastMod=1372103749000&quot;, &quot;ERROR&quot;),
IF(  Ready_to_Bill__c = True,  IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001VUsn&amp;oid=00D700000008zHZ&amp;lastMod=1372103825000&quot;,&quot;Ready to Bill&quot;),

NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integration Flair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Method__c</fullName>
        <label>Invoice Method</label>
        <picklist>
            <picklistValues>
                <fullName>Hard Copy Mailed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperless</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <picklist>
            <picklistValues>
                <fullName>VAUTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VINSOLUTIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIN-CAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Integration_Date__c</fullName>
        <label>Last Integration TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <inlineHelpText>formula field that reads the date and time from the last modified</inlineHelpText>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <defaultValue>&quot;0000&quot;</defaultValue>
        <label>Location</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRR_Active_Billed_Asset_Count__c</fullName>
        <inlineHelpText>counts the # of actively billing recurring assets.</inlineHelpText>
        <label>Total Active Recurring Asset Count</label>
        <summaryFilterItems>
            <field>Billing_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MODIFY</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Recurring_Flag__c</field>
            <operation>equals</operation>
            <value>BP</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Prepaid_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Alternate_Product_Description__c</field>
            <operation>notContain</operation>
            <value>advance payment</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Billing_Item__c.Product_Family_Workflow__c</field>
            <operation>equals</operation>
            <value>Monthly Reoccuring</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Item__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MRR_Difference__c</fullName>
        <formula>Total_MRR__c - Account.vAuto_Spend2__c</formula>
        <inlineHelpText>formula field that reads the difference between the contract MRR and the BU Spend MRR for reporting</inlineHelpText>
        <label>MRR Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Conversion_Rate__c</fullName>
        <formula>Related_Opportunity__r.CAD_Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Conversion Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>IF( Business_Unit__c = &quot;VinSolutions&quot;, Related_Opportunity__r.Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Vin field, hidden from vauto users</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_BU__c</fullName>
        <formula>&quot;Role&quot;&amp;&quot;-&quot;&amp; Related_Opportunity__r.Owner.UserRole.Name &amp;&quot;&amp;&quot;&amp; &quot;BU&quot;&amp;&quot;-&quot;&amp;Related_Opportunity__r.Owner.CompanyName</formula>
        <inlineHelpText>formula field that reads the opportunity owner&apos;s role and Company name from their user profile</inlineHelpText>
        <label>Opportunity Owner BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT(Related_Opportunity__r.Opportunity_Names__c)</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_w_Tax__c</fullName>
        <formula>Related_Opportunity__r.Invoice_Total3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order w/Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_BU__c</fullName>
        <description>admin field</description>
        <formula>Owner.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Owner BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO#</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account.Parent.Name</formula>
        <inlineHelpText>formula field that reads the parent account from the account</inlineHelpText>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Details__c</fullName>
        <inlineHelpText>updated by the system from the installment</inlineHelpText>
        <label>Payment Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <inlineHelpText>system brings this information over from the Installment</inlineHelpText>
        <label>Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Integration_Date__c</fullName>
        <inlineHelpText>updated by workflow</inlineHelpText>
        <label>Prior Integration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_Integration_Status__c</fullName>
        <inlineHelpText>updated by workflow</inlineHelpText>
        <label>Prior Integration Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provision_Deposit__c</fullName>
        <inlineHelpText>vAuto</inlineHelpText>
        <label>Provision Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RMB_Account_Id__c</fullName>
        <inlineHelpText>updated by middleware during integration of contracts to corporate billing system</inlineHelpText>
        <label>RMB Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>